--- a/_notebooks/_notebooks/2025-03-17-BigIdea5.ipynb
+++ b/_notebooks/_notebooks/2025-03-17-BigIdea5.ipynb
@@ -16,6 +16,13 @@
     "comments: true\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hello"
+   ]
   }
  ],
  "metadata": {
