--- a/_notebooks/_notebooks/2025-03-17-teach-bigidea5.ipynb
+++ b/_notebooks/_notebooks/2025-03-17-teach-bigidea5.ipynb
@@ -10,9 +10,9 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: BigIdea 3 Team Teach\n",
-    "description: Big Idea 3 Team Teach - Manas, Arhaan, Ahmad\n",
-    "permalink: /bigidea3/\n",
+    "title: BigIdea 5 Team Teach\n",
+    "description: Big Idea 5 Team Teach - Manas, Arhaan, Ahmad\n",
+    "permalink: /teach/bigidea5\n",
     "comments: true\n",
     "---"
    ]
